Support for uploading breaches via the API
